# ss_mcp

./: .gitignore  CHANGES.md  Makefile  README.md  client.py  pyproject.toml  requirements.txt  server.py
tests/: __init__.py  test_client.py  test_server.py
